--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "marked": "^1.2.0"
+    "marked": "^1.2.0",
+    "urlencode": "^1.1.0"
   }
 }
