--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wwwiki",
+  "name": "docsite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "marked": "^1.2.0",
-    "urlencode": "^1.1.0"
+    "monaco-editor": "^0.21.2",
+    "urlencode": "^1.1.0",
+    "yargs": "^16.1.0"
   }
 }
