--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "events": "^3.2.0",
     "express": "^4.17.1",
-    "urlencode": "^1.1.0",
+    "highlightjs": "^9.16.2",
+    "jquery": "^3.5.1",
+    "marked": "^1.2.2",
+    "monaco-editor": "^0.21.2",
     "yargs": "^16.1.0"
+  },
+  "devDependencies": {
+    "css-loader": "^5.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0"
   }
 }
