--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.5.1",
     "marked": "^1.2.2",
     "monaco-editor": "^0.21.2",
+    "query-string": "^6.13.6",
     "yargs": "^16.1.0"
   },
   "devDependencies": {
