--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "events": "^3.2.0",
     "express": "^4.17.1",
     "marked": "^1.2.2",
+    "monaco-editor": "^0.21.2",
+    "query-string": "^6.13.7",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.0.5",
     "yargs": "^16.1.0"
   },
   "devDependencies": {
