--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "marked": "^1.2.2",
     "monaco-editor": "^0.21.2",
+    "path-browserify": "^1.0.1",
     "query-string": "^6.13.7",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
